# ed-lgt

./: .gitignore  .gitmodules  .readthedocs.yaml  .simsiorc  CHANGELOG.md  CITATION.bib  CITATION.cff  ED_Analysis.py  ED_analysis.py  Hubbard_functions.py  QED_analysis.py  QED_model.py  README.md  SU2_ED.py  SU2_ED_beta.py  SU2_ED_pt2.py  SU2_ED_simsio.py  SU2_analysis.py  SU2_model.py  SU2_model_old.py  SU3_2flavor_site.pkl  TTN_QED_model.py  TTN_script_QED_static.py  __init__.py  analysis.py  analyze_DFL.py  analyze_LBO.py  analyze_QED.py  analyze_SU2.py  analyze_Z2Hubbard.py  analyze_scattering.py  analyze_stringbreaking.py  config_example.yaml  eig_values_mean_density_L_16lambda_0.6point_100_loc_dim_44BD_64.txt  environment.yml  environment_simsio.yml  example_mf_phi4.py  example_phi4.py  extend_basis.py  functions.py  (+28 more)
.githooks/: pre-push
Data_Analysis/: ._Derivatives.py  ._Manage_Data.py  .___init__.py  .___pycache__  Derivatives.py  Manage_Data.py  __init__.py
Error_Debugging/: ._Checks.py  .___init__.py  .___pycache__  Checks.py  __init__.py
Hamitonian_Functions/: ._LGT_Hamiltonians.py  ._LGT_Objects.py  ._Print_Observables.py  ._QMB_Operations  .___init__.py  .___pycache__  LGT_Hamiltonians.py  LGT_Objects.py  Print_Observables.py  Symmetry_sectors.py
Operators/: ._Bose_Fermi_Operators.py  ._DeF_Hubbard_Operators.py  ._Manage_Data.py  .___init__.py  Bose_Fermi_Operators.py  DeF_Hubbard_Operators.py  Manage_Data.py  SU2_Free_Operators.py  SU2_Full_Operators.py  SU2_Matter_Operators.py  SU2_Pure_Operators.py  get_operators.py  prova.txt
TTN_scripts/: GS_state.pklttn  (+6 more)
(+419 files in other folders)
