[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edlgt"
version = "0.1.0"
description = "Exact diagonalization tools for lattice gauge theories and quantum many-body Hamiltonians"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Giovanni Cataldi", email = "giovacataldi96@gmail.com" },
]
keywords = ["exact diagonalization", "lattice gauge theory", "quantum many-body"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "numba>=0.57",
  "sympy>=1.10",
  "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.0",
  "pytest>=7.0",
  "black>=23.0",
  "pre-commit>=3.0",
  "pylint>=2.17",
]
docs = [
  "sphinx>=6.0",
  "sphinx-rtd-theme>=1.0",
]
simsio = [
  "simsio @ git+https://github.com/rgbmrc/simsio.git",
]

[project.urls]
Homepage = "https://github.com/gcataldi96/ed-lgt"
Documentation = "https://ed-su2.readthedocs.io/en/latest/"
Repository = "https://github.com/gcataldi96/ed-lgt"
Issues = "https://github.com/gcataldi96/ed-lgt/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["edlgt", "edlgt.*"]
